--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -13,6 +13,7 @@
       margin-bottom: 10px;
     }
     > .post-subtitle {
+      font-size: 20px;
       font-weight: 300;
       margin: 0 0 10px;
     }
